--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,40 @@
-body {
-  background-color: pink;
-  color: black;
+* {
+  background-color: hsla(42, 70%, 94%, 1);
+}
+
+html {
+  margin: 7px;
+  color: hsla(75, 38%, 25%, 1);
+}
+
+header {
+  font-family: Arvo, sans-serif;
+  padding-top: 5px;
+  padding-bottom: 12px;
+}
+
+h1 {
+  font-weight: 700;
+  font-size: 32px;
+}
+
+main {
+  font-family: Lato, sans-serif;
+  font-size: 18px;
+  text-indent: 16px;
+  overflow: hidden;
+}
+
+p {
+  font-weight: 400;
+  padding-top: 2px;
+  padding-left: 2px;
+  padding-bottom: 2px;
+  padding-right: 2px;
+}
+
+
+button {
+  color: hsla(38, 100%, 70%, 1);
+  background-color: hsla(75, 38%, 25%, 1);
 }
